small bugfixes