@@ -1,6 +1,6 @@
 plugins {
     application
-    id("org.openjfx.javafxplugin") version "0.1.0"
+    id("org.openjfx.javafxplugin") version "0.1.0" // Use the latest version if available
 }
 
 repositories {
@@ -16,10 +16,10 @@ javafx {
     )
 }
 
-dependencies {
-    // Add other dependencies here if needed
-}
-
 application {
-    mainClass.set("com.core.Visuals.GUIFrontendStuff")
+    mainClass.set("com.core.Visuals.SynthApplication")
+    applicationDefaultJvmArgs = listOf(
+            "--module-path", "/Users/christoffer/javafx-sdk-17/lib",
+            "--add-modules", "javafx.controls,javafx.fxml"
+    )
 }
